# Cronkite

./: .gitignore  README.md  pyproject.toml
src/cronkite/: __init__.py  config.py  cronkite.py  instruction_builder.py  response_parser.py
src/cronkite/actions/: __init__.py  classify_stories.py  extract_quotes.py  filter_noise.py  generate_key_points.py  generate_story.py  generate_summary.py  generate_title.py  group_articles.py  group_stories.py
src/cronkite/instructions/: __init__.py  extract_quotes.py  filter_noise.py  generate_key_points.py  generate_summary.py  generate_title.py  group_articles.py
src/cronkite/instructions/classify_stories/: __init__.py  classify_stories.py
src/cronkite/instructions/generate_story/: __init__.py  extract_quotes.py  filter_noise.py  generate_key_points.py  generate_story_base.py  generate_summary.py  generate_title.py  group_articles.py  resolve_location.py
src/cronkite/instructions/group_stories/: __init__.py  group_stories.py
tests/: test_classify_stories.py  test_cronkite.py  test_group_stories.py
tests/test_data/: middle_east_conflict.json  political_election.json  tech_product_launch.json  turkey_earthquake.json
